tests/slp29_for_in_value_ptr_immutable_bad.stderr
tests/slp29_for_in_value_ptr_immutable_bad.sl:5:6: error: SL1004: unexpected token
